<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ConfigOverridesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/override_notes"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btnOverrideVoLTE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/override_volte"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnOverrideNRMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/override_nr_mode"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnOverrideVoNR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/override_vonr"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnOverrideWFC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/override_wfc"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnOverride5GSignalThreshold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/override_5g_signal_threshold"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnResetConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_config"
            android:textAllCaps="false" />

    </LinearLayout>

</ScrollView>